--- a/src/landing.css
+++ b/src/landing.css
@@ -118,7 +118,7 @@ span.glow {
 }
 
 #header.landing-header {
-    background: rgb(151,171,178) !important;
+    /* background: rgb(151,171,178) !important; */
     -webkit-transition: background 0.6s; /* Safari */
     transition: background 0.6s;
     height: 52px;
@@ -248,7 +248,7 @@ span.glow {
 a.link.landing-link {
     padding: 0 10px;
     display: block;
-    color: lightskyblue;
+    /* color: lightskyblue; */
     font-size: 14px;
     line-height: 24px;
 }
