disabled top margins from content

--- a/src/Details/match.css
+++ b/src/Details/match.css
@@ -75,6 +75,6 @@
 #details {
     margin: 5px;
     margin-left: 25px;
-    margin-top: 102px;
+    /* margin-top: 102px; */
     padding-bottom: 5px;
 }
