--- a/src/aboutNepa.css
+++ b/src/aboutNepa.css
@@ -22,7 +22,7 @@
     height: 212px;
     max-width: 1439px;
     margin: auto;
-    margin-top: 102px;
+    /* margin-top: 102px; */
 }
 
 #about-nepaccess-banner {
