--- a/src/User/login.css
+++ b/src/User/login.css
@@ -1,5 +1,5 @@
 #main {
-    margin-top: 102px;
+    /* margin-top: 102px; */
 }
 
 span.highlight {
@@ -45,7 +45,7 @@ span.highlight {
 }
 
 .login-form {
-    margin-top: 102px;
+    /* margin-top: 102px; */
     min-width: 700px;
 }
 
