--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body {
   position: fixed;
   width: 100%;
   min-width: 700px;
-  height: 102px;
+  /* height: 102px; */
   left: 0px;
   top: 0px;
 
