disabled home-page style rules since it was conflicting with updated header

--- a/src/index.css
+++ b/src/index.css
@@ -23,14 +23,12 @@ body {
   flex-direction: column;
 }
 
-
+/* 
 #home-page {
   position: relative;
   margin: auto;
-
-  /* background: #FBFBF6; */
   background: #F8F9FA;
-}
+} */
 
 #header {
   position: fixed;
