Revert "Merge pull request #5 from GeorgeMSchaffer/fix-download-filenames"
This reverts commit f2e0daf2f64d7908764a1ef08c75a8a6ae5fc419, reversing
changes made to 978db441d5d2a209df95ebe5bd20cf42bd6cbda8.

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,6 @@ body {
 }
 
 #header {
-height: 102px;
   position: fixed;
   width: 100%;
   min-width: 700px;
@@ -46,7 +45,7 @@ height: 102px;
   z-index: 99999; /* Geojson map introduces some very high z-index items */
 
   /* background: #8FBC3F; */
-  background: #ABBDC4;
+  background: #B6C4C8;
 }
 
 /* Header contents */
@@ -285,7 +284,6 @@ height: 102px;
 
 #app-content {
     min-width: 1300px;
-    margin-top: -52px;
 }
 /* .footer-content {
     margin-bottom: 15px;
@@ -335,7 +333,6 @@ height: 102px;
 }
 
 .no-select {
-    
   -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
      -khtml-user-select: none; /* Konqueror HTML */
