--- a/src/landing.css
+++ b/src/landing.css
@@ -60,7 +60,7 @@ span.glow {
     /* min-height: 400px;
     height: 50%;
     width: 100%; */
-    height: calc(100vh - 350px);
+    height: calc(100vh - 450px);
     min-width: 800px;
     min-height: 600px;
 
@@ -78,7 +78,7 @@ span.glow {
     max-width: 1120px;
     margin: 0 auto;
 
-    padding-top: 140px;
+    padding-top: 20px;
 
     -webkit-column-count: 2; /* Chrome, Safari, Opera */
     -moz-column-count: 2; /* Firefox */
@@ -122,6 +122,7 @@ span.glow {
     background: none;
     -webkit-transition: background 0.6s; /* Safari */
     transition: background 0.6s;
+    background: #B6C4C8;
 }
 #header.landing-header.transition {
     background: #B6C4C8;
